# Yukon-Solitair

./: CMakeLists.txt  server
Backend -C/: card.c  card.h  game.c  game.h  main.c
gui_py/: Cards.py  Client.py  gui.py
src/: Makefile  board.h  card.c  card.h  game.c  game.h  io.c  io.h  linked_list_test.c  main.c  server.c  server.h  utils.c  utils.h  yokon
src/yokon.dSYM/: server.c
src/yokon.dSYM/Contents/: Info.plist
src/yokon.dSYM/Contents/Resources/DWARF/: yokon
src/yokon.dSYM/Contents/Resources/Relocations/aarch64/: yokon.yml
